[package]
name = "hlua"
version = "0.1.0"
authors = ["pierre.krieger1708@gmail.com", "Fuwn <contact@fuwn.me>"]
description = "Zero-cost high-level wrapper for Lua"
keywords = ["lua"]
repository = "https://github.com/Fuwn/hlua.git"
license = "MIT"

[dependencies]
libc = "0.2"
lua544-sys = { version = "0.1.0", path = "../lua544-sys" }
